--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "firebase": "^10.5.0",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.4",
+    "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "supports-color": "^9.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
